unpackaged/main/default/objects/Intake_Vendor__c/Intake_Vendor__c.object-meta.xml
<CustomObject>
    <label>Intake Vendor</label>
    <nameField>
        <label>Intake Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intake Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>