unpackaged/main/default/objects/Intake_Vendor__c/fields/Disable_Vendor_Communication__c.field-meta.xml
<CustomField>
    <fullName>Disable_Vendor_Communication__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked then this vendor will not receive automated communications</description>
    <inlineHelpText>If checked then this vendor will not receive automated communications</inlineHelpText>
    <label>Disable Vendor Communication</label>
    <type>Checkbox</type>
</CustomField>