unpackaged/main/default/objects/Intake_Vendor__c/fields/Is_Intake_API__c.field-meta.xml
<CustomField>
    <fullName>Is_Intake_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Intake API</label>
    <type>Checkbox</type>
</CustomField>