unpackaged/main/default/objects/Intake_Vendor__c/fields/X3P_Email_To__c.field-meta.xml
<CustomField>
    <fullName>X3P_Email_To__c</fullName>
    <description>Comma-separated list of email addresses to send 3P Case Verification emails to.</description>
    <inlineHelpText>Comma-separated list of email addresses to send 3P Case Verification emails to.</inlineHelpText>
    <label>3P Email To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>