unpackaged/main/default/objects/Intake_Vendor__c/fields/X3P_Email_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>X3P_Email_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set this lookup to the contact record containing the 3P To Email address.</description>
    <inlineHelpText>Set this lookup to the contact record containing the 3P To Email address.</inlineHelpText>
    <label>3P Email To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake Vendors</relationshipLabel>
    <relationshipName>Intake_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>