unpackaged/main/default/objects/Intake_Vendor__c/fields/X3P_Email_To_fx__c.field-meta.xml
<CustomField>
    <fullName>X3P_Email_To_fx__c</fullName>
    <formula>X3P_Email_To_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3P Email To</label>
    <type>Text</type>
</CustomField>