unpackaged/main/default/objects/Intake_Vendor__c/fields/X3P_EOF_Initial_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>X3P_EOF_Initial_Email_Template__c</fullName>
    <description>The 18-digit salesforce id of the email template to be used</description>
    <inlineHelpText>The 18-digit salesforce id of the email template to be used</inlineHelpText>
    <label>3P EOF Initial Email Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>