unpackaged/main/default/objects/Intake_Vendor__c/fields/X3P_From_Email__c.field-meta.xml
<CustomField>
    <fullName>X3P_From_Email__c</fullName>
    <description>Email Address the CV and EOF Emails will appear to be sent from</description>
    <inlineHelpText>Email Address the CV and EOF Emails will appear to be sent from</inlineHelpText>
    <label>3P From Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>