unpackaged/main/default/objects/Intake_Vendor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary_Contact_First_Name__c</columns>
    <columns>X3P_Email_To_Contact__c</columns>
    <columns>Disable_Vendor_Communication__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>